# return_analysis

./: .bruin.yml.example  .gitignore  README.md  main.py  pipeline.yml  pyproject.toml
assets/extract/: export_to_gcs.py
assets/mart/: high_return_skus.sql  return_trends.sql  returns_by_category.sql  top_returning_customers.sql
assets/raw/: distribution_centers.asset.yml  inventory_items.asset.yml  order_items.asset.yml  orders.asset.yml  products.asset.yml  raw_customers.asset.yml  raw_order_items.asset.yml  raw_orders.asset.yml  raw_products.asset.yml  raw_sellers.asset.yml  users.asset.yml
assets/staging/: staging.stg_order_items.sql
scripts/: ingest_data.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
